[tool.poetry]
name = "perdiem-django"
version = "0.1.0"
description = "Crowdfunding platform for emerging musicians."
authors = ["Lucas Connors <lucas@revolutiontech.ca>", "localastronaut"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~2.2.10"
gunicorn = "^20.0.4"
psycopg2 = "=2.8.6"
Pillow = "^8.0.1"
social-auth-app-django = "^4.0.0"
python-memcached = "^1.59"
requests = "^2.24.0"
boto3 = "^1.16.9"
django-pigeon = "^0.3.0"
sorl-thumbnail = "^12.6.3"
whitenoise = "^5.2.0"
django-s3-storage = "^0.13.4"
djangorestframework = "^3.12.1"
django-ses = "^1.0.3"
geopy = "^2.0.0"
pinax-stripe = "^4.4.0"
django-templated-email = "^2.3.0"
django-markdown-deux = "^1.0.5"
django-pagedown = "^2.1.2"
django-gfklookupwidget = "^1.0.9"
python-dotenv = "^0.15.0"
sentry-sdk = "^0.19.1"
fabric = "^2.5"
django-configurations = "^2.2"

[tool.poetry.dev-dependencies]
factory-boy = "^3.1.0"
coverage = "^5.3"
black = "^20.8b1"
pyupgrade = "^2.7"
isort = "^5.6.4"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
